connecting to influx

--- a/docker/observer/config/observer-config.yml
+++ b/docker/observer/config/observer-config.yml
@@ -1,5 +1,5 @@
 database:
-  url: smart-home-influx:8086
+  url: http://smart-home-influx:8086
   token: localadmintoken
 mqtt-broker:
   url: smart-home-mosquitto:1883
