make observer more resilient

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     container_name: smart-home-observer
     image: smart-home-observer:0.0.0
     depends_on:
-      - influx
-      - mosquitto
+      influx:
+        condition: service_healthy
+      mosquitto:
+        condition: service_started
     ports:
       - '8081:8080'
     networks:
@@ -48,12 +50,18 @@ services:
       - DOCKER_INFLUXDB_INIT_BUCKET=consumption
     networks:
       - smart-home
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8086/ping" ]
+      interval: 3s
+      timeout: 10s
+      retries: 1
 
   grafana:
     container_name: smart-home-grafana
     image: grafana/grafana-oss:9.3.1
     depends_on:
-      - influx
+      influx:
+        condition: service_healthy
     ports:
       - '3000:3000'
     volumes:
