--- a/docker/observer/config/observer-config.yml
+++ b/docker/observer/config/observer-config.yml
@@ -9,6 +9,4 @@ mqtt-broker:
   username: 'local'
   password: 'localsecret'
   topics:
-    consumption:
-      electricity: 'consumption.electricity.main'
-      gas: 'consumption.gas.main'
+    consumption: 'consumption'
