--- a/docker/observer/config/observer-config.yml
+++ b/docker/observer/config/observer-config.yml
@@ -1,12 +1,10 @@
 database:
   url: 'http://smart-home-influx:8086'
   token: 'localadmintoken'
-  org: 'smart-home'
-  buckets:
-    consumption: 'consumption'
+  org: 'salex'
+  bucket: 'smart-home'
 mqtt-broker:
   url: 'tcp://smart-home-mosquitto:1883'
   username: 'local'
   password: 'localsecret'
-  topics:
-    consumption: 'consumption'
+  topic: 'smart-home'
