--- a/docker/observer/config/observer-config.yml
+++ b/docker/observer/config/observer-config.yml
@@ -1,6 +1,12 @@
 database:
   url: 'http://smart-home-influx:8086'
-  token: 'localadmintoken'
+  token: '{cipher}localadmintoken'
   org: 'salex'
   bucket: 'smart-home'
-
+hmip:
+  accessPointSGTIN: '{cipher}'
+  deviceID: '{cipher}'
+  clientID: '{cipher}'
+  clientAuthToken: '{cipher}'
+  authToken: '{cipher}'
+  lookupURL: ''
