--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -102,3 +102,23 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/arm/v7,linux/arm64,linux/amd64
+  publish-helm:
+    needs:
+      - publish-docker
+    name: Publish helm chart
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4
+        with:
+          ref: v${{ github.event.inputs.version }}
+
+      - name: Push Helm chart
+        uses: bsord/helm-push@v4.2.0
+        with:
+          useOCIRegistry: true
+          registry-url: oci://${{ env.REGISTRY }}/${{ github.repository }}
+          username: ${{ github.actor }}
+          access-token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
+          chart-folder: deployments/kubernetes/helm/observer
