adding datasource to helm chart

--- a/deployments/kubernetes/helm/observer/values.yaml
+++ b/deployments/kubernetes/helm/observer/values.yaml
@@ -14,6 +14,7 @@ config:
     organization: salex
 influxdb2:
   adminUser:
-    organization: "salex"
-    bucket: "homematic"
-    retention_policy: "731d"
+    organization: salex
+    bucket: homematic
+    retention_policy: 731d
+    existingSecret: influx-credentials
