--- a/deployments/kubernetes/helm/observer/templates/deployment.yaml
+++ b/deployments/kubernetes/helm/observer/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - name: INFLUX_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-influxdb2-auth
+                  name: {{ .Values.influxdb2.adminUser.existingSecret }}
                   key: admin-token
 
 
