add feature flag for grafana integration with opt in

--- a/deployments/kubernetes/helm/observer/values.yaml
+++ b/deployments/kubernetes/helm/observer/values.yaml
@@ -12,6 +12,8 @@ config:
   influx:
     bucket: homematic
     organization: salex
+  grafana:
+    enabled: false # set to true to deploy grafana datasource, dashboards and alerts
 influxdb2:
   adminUser:
     organization: salex
