--- a/deployments/kubernetes/helm/observer/templates/datasource.yaml
+++ b/deployments/kubernetes/helm/observer/templates/datasource.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.config.grafana.enabled }}
 {{- $influxSecret := lookup "v1" "Secret" .Release.Namespace .Values.influxdb2.adminUser.existingSecret }}
 {{- if not $influxSecret }}
 {{- fail "InfluxDB Secret not found – deploy Influx first" }}
@@ -24,3 +25,4 @@ stringData:
           organization: salex
         secureJsonData:
           token: '{{ index $influxSecret.data "admin-token" | b64dec }}'
+{{- end }}
