--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,8 @@ jobs:
         run: |
           git config --global user.email "buildmanager@salex.org"
           git config --global user.name "Bob the Builder"
+          git add deployments/kubernetes/helm/observer/Chart.yaml
+          git commit -m "updating version to ${{ github.event.inputs.version }} in helm chart"
           git tag -a v${{ github.event.inputs.version }} -m "tagging version ${{ github.event.inputs.version }}"
           git push --tags
 
@@ -116,6 +118,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: v${{ github.event.inputs.version }}
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+
+      - name: Helm dependency update
+        run: helm dependency update deployments/kubernetes/helm/observer
 
       - name: Push Helm chart
         uses: bsord/helm-push@v4.2.0
