--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -117,6 +117,12 @@ jobs:
         with:
           ref: v${{ github.event.inputs.version }}
 
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+
+      - name: Helm dependency update
+        run: helm dependency update deployments/kubernetes/helm/observer
+
       - name: Push Helm chart
         uses: bsord/helm-push@v4.2.0
         with:
