--- a/deployments/kubernetes/helm/observer/templates/deployment.yaml
+++ b/deployments/kubernetes/helm/observer/templates/deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: {{ .Values.name }}
     spec:
+      imagePullSecrets:
+        {{- if .Values.container.imagePullSecrets }}
+        {{- toYaml .Values.container.imagePullSecrets | nindent 8 }}
+        {{- end }}
       containers:
         - name: {{ .Values.name }}
           image: {{ .Values.container.image }}
