--- a/deployments/kubernetes/helm/observer/templates/deployment.yaml
+++ b/deployments/kubernetes/helm/observer/templates/deployment.yaml
@@ -22,6 +22,22 @@ spec:
       containers:
         - name: {{ .Values.name }}
           image: {{ .Values.container.image }}
+          ports:
+            - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 60
+            failureThreshold: 10
           envFrom:
             - secretRef:
                 name: {{ .Values.config.hmip.secret }}
