--- a/deployments/kubernetes/helm/observer/values.yaml
+++ b/deployments/kubernetes/helm/observer/values.yaml
@@ -22,3 +22,10 @@ influxdb2:
     bucket: homematic
     retention_policy: 731d
     existingSecret: influx-credentials
+  initScripts:
+    enabled: true
+    scripts:
+      create-buckets.sh: |-
+        #!/bin/sh
+        influx bucket create --org salex --name consumption --retention 365d
+      
