switch from healthy to alive for probe

--- a/deployments/kubernetes/helm/observer/templates/deployment.yaml
+++ b/deployments/kubernetes/helm/observer/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
             failureThreshold: 12
           livenessProbe:
             httpGet:
-              path: /healthy
+              path: /alive
               port: 8080
             initialDelaySeconds: 60
             periodSeconds: 60
