--- a/deployments/kubernetes/helm/observer/templates/dashboards.yaml
+++ b/deployments/kubernetes/helm/observer/templates/dashboards.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     grafana_dashboard: "1"
+  annotations:
+    grafana_folder: smart-home-observergst
 data:
 {{- $files := .Files.Glob "dashboards/*.json" }}
 {{- range $path, $file := $files }}
