--- a/deployments/kubernetes/helm/observer/alerts/climate-alerts.yml
+++ b/deployments/kubernetes/helm/observer/alerts/climate-alerts.yml
@@ -13,7 +13,7 @@ groups:
             relativeTimeRange:
               from: 86400
               to: 0
-            datasourceUid: homematic-influx
+            datasourceUid: smart-home-observer
             model:
               refId: A
               rawQuery: true
@@ -103,7 +103,7 @@ groups:
             relativeTimeRange:
               from: 86400
               to: 0
-            datasourceUid: homematic-influx
+            datasourceUid: smart-home-observer
             model:
               refId: A
               rawQuery: true
@@ -193,7 +193,7 @@ groups:
             relativeTimeRange:
               from: 86400
               to: 0
-            datasourceUid: homematic-influx
+            datasourceUid: smart-home-observer
             model:
               refId: A
               rawQuery: true
@@ -283,7 +283,7 @@ groups:
             relativeTimeRange:
               from: 86400
               to: 0
-            datasourceUid: homematic-influx
+            datasourceUid: smart-home-observer
             model:
               refId: A
               rawQuery: true
