--- a/deployments/kubernetes/helm/observer/templates/dashboards.yaml
+++ b/deployments/kubernetes/helm/observer/templates/dashboards.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     grafana_dashboard: "1"
   annotations:
-    grafana_folder: smart-home-observergst
+    grafana_folder: smart-home
 data:
 {{- $files := .Files.Glob "dashboards/*.json" }}
 {{- range $path, $file := $files }}
