--- a/deployments/kubernetes/helm/observer/alerts/climate-alerts.yml
+++ b/deployments/kubernetes/helm/observer/alerts/climate-alerts.yml
@@ -20,8 +20,8 @@ groups:
               resultFormat: time_series
               query: |
                 from(bucket: "homematic")
-                  |> range($__timeRange)
-                  |> filter(fn: (r) => 
+                  |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
+                  |> filter(fn: (r) =>
                     r._measurement == "device" and
                     r._field == "actual_temperature" and
                     (
@@ -29,6 +29,7 @@ groups:
                       r.device_id == "3014F711A0000EDD89B3A112"
                     )
                   )
+                  |> map(fn: (r) => ({ r with subject: "climate" }))
                   |> group(columns: ["device_name"])
           - refId: B
             relativeTimeRange:
@@ -92,9 +93,6 @@ groups:
         annotations:
           summary: The minimum temperature of {{ $labels.device_name }} was less than 3 degree in the last 24 hours
         isPaused: false
-        labels:
-          room: workshop
-          subject: climate
       - uid: b718b7c8-2ec4-4e58-8169-617bd57ed053
         title: Workshop too hot
         condition: C
@@ -110,8 +108,8 @@ groups:
               resultFormat: time_series
               query: |
                 from(bucket: "homematic")
-                  |> range($__timeRange)
-                  |> filter(fn: (r) => 
+                  |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
+                  |> filter(fn: (r) =>
                     r._measurement == "device" and
                     r._field == "actual_temperature" and
                     (
@@ -119,6 +117,7 @@ groups:
                       r.device_id == "3014F711A0000EDD89B3A112"
                     )
                   )
+                  |> map(fn: (r) => ({ r with subject: "climate" }))
                   |> group(columns: ["device_name"])
           - refId: B
             relativeTimeRange:
@@ -182,9 +181,6 @@ groups:
         annotations:
           summary: The maximum temperature of {{ $labels.device_name }} was more than 30 degree in the last 24 hours
         isPaused: false
-        labels:
-          room: workshop
-          subject: climate
       - uid: dad0758d-e873-4c69-ad7c-d78f8557ddf5
         title: Workshop too wet
         condition: C
@@ -200,8 +196,8 @@ groups:
               resultFormat: time_series
               query: |
                 from(bucket: "homematic")
-                  |> range($__timeRange)
-                  |> filter(fn: (r) => 
+                  |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
+                  |> filter(fn: (r) =>
                     r._measurement == "device" and
                     r._field == "humidity" and
                     (
@@ -209,6 +205,7 @@ groups:
                       r.device_id == "3014F711A0000EDD89B3A112"
                     )
                   )
+                  |> map(fn: (r) => ({ r with subject: "climate" }))
                   |> group(columns: ["device_name"])
           - refId: B
             relativeTimeRange:
@@ -272,9 +269,6 @@ groups:
         annotations:
           summary: The maximum humidity of {{ $labels.device_name }} was more than 90 percent in the last 24 hours
         isPaused: false
-        labels:
-          room: workshop
-          subject: climate
       - uid: de2c5f2a-1961-4dec-af0f-871f549a24df
         title: Workshop too dry
         condition: C
@@ -290,8 +284,8 @@ groups:
               resultFormat: time_series
               query: |
                 from(bucket: "homematic")
-                  |> range($__timeRange)
-                  |> filter(fn: (r) => 
+                  |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
+                  |> filter(fn: (r) =>
                     r._measurement == "device" and
                     r._field == "humidity" and
                     (
@@ -299,6 +293,7 @@ groups:
                       r.device_id == "3014F711A0000EDD89B3A112"
                     )
                   )
+                  |> map(fn: (r) => ({ r with subject: "climate" }))
                   |> group(columns: ["device_name"])
           - refId: B
             relativeTimeRange:
@@ -362,6 +357,3 @@ groups:
         annotations:
           summary: The minimum humidity of {{ $labels.device_name }} was less than 10 percent in the last 24 hours
         isPaused: false
-        labels:
-          room: workshop
-          subject: climate
