--- a/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
+++ b/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
@@ -97,7 +97,7 @@ spec:
       execErrState: Error
       for: 0s
       annotations:
-        summary: The minimum temperature of {{ $labels.device_name }} was less than 3 degree in the last 24 hours
+        summary: The minimum temperature of {{ "{{" }} $labels.device_name {{ "}}" }} was less than 3 degree in the last 24 hours
       isPaused: false
     - uid: b718b7c8-2ec4-4e58-8169-617bd57ed053
       title: Workshop too hot
@@ -184,7 +184,7 @@ spec:
       execErrState: Error
       for: 0s
       annotations:
-        summary: The maximum temperature of {{ $labels.device_name }} was more than 30 degree in the last 24 hours
+        summary: The maximum temperature of {{ "{{" }} $labels.device_name {{ "}}" }} was more than 30 degree in the last 24 hours
       isPaused: false
     - uid: dad0758d-e873-4c69-ad7c-d78f8557ddf5
       title: Workshop too wet
@@ -271,7 +271,7 @@ spec:
       execErrState: Error
       for: 0s
       annotations:
-        summary: The maximum humidity of {{ $labels.device_name }} was more than 90 percent in the last 24 hours
+        summary: The maximum humidity of {{ "{{" }} $labels.device_name {{ "}}" }} was more than 90 percent in the last 24 hours
       isPaused: false
     - uid: de2c5f2a-1961-4dec-af0f-871f549a24df
       title: Workshop too dry
@@ -358,6 +358,6 @@ spec:
       execErrState: Error
       for: 0s
       annotations:
-        summary: The minimum humidity of {{ $labels.device_name }} was less than 10 percent in the last 24 hours
+        summary: The minimum humidity of {{ "{{" }} $labels.device_name {{ "}}" }} was less than 10 percent in the last 24 hours
       isPaused: false
 {{- end }}
