adding missing observer dashboards and alerts

--- a/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
+++ b/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
@@ -10,7 +10,7 @@ spec:
   instanceSelector:
     matchLabels:
       grafana: naboo
-  interval: 1d
+  interval: 24h
   rules:
     - uid: b27458f1-f03b-44e4-8826-709ba30c9b16
       title: Workshop too cold
@@ -20,23 +20,33 @@ spec:
           relativeTimeRange:
             from: 86400
             to: 0
-          datasourceUid: smart-home-observer
+          datasourceUid: smart-home-observer-homematic
           model:
-            refId: A
+            datasource:
+              type: influxdb
+              uid: smart-home-observer-homematic
+            groupBy:
+              - params:
+                  - device_name::tag
+                type: tag
+            intervalMs: 1000
+            maxDataPoints: 43200
+            measurement: device
+            orderByTime: ASC
+            policy: default
+            query: SELECT "actual_temperature" FROM "device" WHERE ("device_id"::tag = '3014F711A0000EDD89B3A015') OR ("device_id"::tag = '3014F711A0000EDD89B3A112') AND $timeFilter GROUP BY "device_name"::tag
             rawQuery: true
+            refId: A
             resultFormat: time_series
-            query: |
-              from(bucket: "homematic")
-                |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
-                |> filter(fn: (r) =>
-                  r._measurement == "device" and
-                  r._field == "actual_temperature" and
-                  (
-                    r.device_id == "3014F711A0000EDD89B3A015" or
-                    r.device_id == "3014F711A0000EDD89B3A112"
-                  )
-                )
-                |> group(columns: ["device_name"])
+            select:
+              - - params:
+                    - actual_temperature
+                  type: field
+            tags:
+              - condition: OR
+                key: device_id::tag
+                operator: =
+                value: 3014F711A0000EDD89B3A015
         - refId: B
           relativeTimeRange:
             from: 86400
@@ -45,7 +55,7 @@ spec:
           model:
             conditions:
               - evaluator:
-                  params: []
+                  params: [ ]
                   type: gt
                 operator:
                   type: and
@@ -53,7 +63,7 @@ spec:
                   params:
                     - B
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -82,7 +92,7 @@ spec:
                   params:
                     - C
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -107,23 +117,33 @@ spec:
           relativeTimeRange:
             from: 86400
             to: 0
-          datasourceUid: smart-home-observer
+          datasourceUid: smart-home-observer-homematic
           model:
-            refId: A
+            datasource:
+              type: influxdb
+              uid: smart-home-observer-homematic
+            groupBy:
+              - params:
+                  - device_name::tag
+                type: tag
+            intervalMs: 1000
+            maxDataPoints: 43200
+            measurement: device
+            orderByTime: ASC
+            policy: default
+            query: SELECT "actual_temperature" FROM "device" WHERE ("device_id"::tag = '3014F711A0000EDD89B3A015') OR ("device_id"::tag = '3014F711A0000EDD89B3A112') AND $timeFilter GROUP BY "device_name"::tag
             rawQuery: true
+            refId: A
             resultFormat: time_series
-            query: |
-              from(bucket: "homematic")
-                |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
-                |> filter(fn: (r) =>
-                  r._measurement == "device" and
-                  r._field == "actual_temperature" and
-                  (
-                    r.device_id == "3014F711A0000EDD89B3A015" or
-                    r.device_id == "3014F711A0000EDD89B3A112"
-                  )
-                )
-                |> group(columns: ["device_name"])
+            select:
+              - - params:
+                    - actual_temperature
+                  type: field
+            tags:
+              - condition: OR
+                key: device_id::tag
+                operator: =
+                value: 3014F711A0000EDD89B3A015
         - refId: B
           relativeTimeRange:
             from: 86400
@@ -132,7 +152,7 @@ spec:
           model:
             conditions:
               - evaluator:
-                  params: []
+                  params: [ ]
                   type: gt
                 operator:
                   type: and
@@ -140,7 +160,7 @@ spec:
                   params:
                     - B
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -169,7 +189,7 @@ spec:
                   params:
                     - C
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -194,23 +214,33 @@ spec:
           relativeTimeRange:
             from: 86400
             to: 0
-          datasourceUid: smart-home-observer
+          datasourceUid: smart-home-observer-homematic
           model:
-            refId: A
+            datasource:
+              type: influxdb
+              uid: smart-home-observer-homematic
+            groupBy:
+              - params:
+                  - device_name::tag
+                type: tag
+            intervalMs: 1000
+            maxDataPoints: 43200
+            measurement: device
+            orderByTime: ASC
+            policy: default
+            query: SELECT "humidity" FROM "device" WHERE ("device_id"::tag = '3014F711A0000EDD89B3A015') OR ("device_id"::tag = '3014F711A0000EDD89B3A112') AND $timeFilter GROUP BY "device_name"::tag
             rawQuery: true
+            refId: A
             resultFormat: time_series
-            query: |
-              from(bucket: "homematic")
-                |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
-                |> filter(fn: (r) =>
-                  r._measurement == "device" and
-                  r._field == "humidity" and
-                  (
-                    r.device_id == "3014F711A0000EDD89B3A015" or
-                    r.device_id == "3014F711A0000EDD89B3A112"
-                  )
-                )
-                |> group(columns: ["device_name"])
+            select:
+              - - params:
+                    - humidity
+                  type: field
+            tags:
+              - condition: OR
+                key: device_id::tag
+                operator: =
+                value: 3014F711A0000EDD89B3A015
         - refId: B
           relativeTimeRange:
             from: 86400
@@ -219,7 +249,7 @@ spec:
           model:
             conditions:
               - evaluator:
-                  params: []
+                  params: [ ]
                   type: gt
                 operator:
                   type: and
@@ -227,7 +257,7 @@ spec:
                   params:
                     - B
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -256,7 +286,7 @@ spec:
                   params:
                     - C
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -281,23 +311,33 @@ spec:
           relativeTimeRange:
             from: 86400
             to: 0
-          datasourceUid: smart-home-observer
+          datasourceUid: smart-home-observer-homematic
           model:
-            refId: A
+            datasource:
+              type: influxdb
+              uid: smart-home-observer-homematic
+            groupBy:
+              - params:
+                  - device_name::tag
+                type: tag
+            intervalMs: 1000
+            maxDataPoints: 43200
+            measurement: device
+            orderByTime: ASC
+            policy: default
+            query: SELECT "humidity" FROM "device" WHERE ("device_id"::tag = '3014F711A0000EDD89B3A015') OR ("device_id"::tag = '3014F711A0000EDD89B3A112') AND $timeFilter GROUP BY "device_name"::tag
             rawQuery: true
+            refId: A
             resultFormat: time_series
-            query: |
-              from(bucket: "homematic")
-                |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
-                |> filter(fn: (r) =>
-                  r._measurement == "device" and
-                  r._field == "humidity" and
-                  (
-                    r.device_id == "3014F711A0000EDD89B3A015" or
-                    r.device_id == "3014F711A0000EDD89B3A112"
-                  )
-                )
-                |> group(columns: ["device_name"])
+            select:
+              - - params:
+                    - humidity
+                  type: field
+            tags:
+              - condition: OR
+                key: device_id::tag
+                operator: =
+                value: 3014F711A0000EDD89B3A015
         - refId: B
           relativeTimeRange:
             from: 86400
@@ -306,7 +346,7 @@ spec:
           model:
             conditions:
               - evaluator:
-                  params: []
+                  params: [ ]
                   type: gt
                 operator:
                   type: and
@@ -314,7 +354,7 @@ spec:
                   params:
                     - B
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -343,7 +383,7 @@ spec:
                   params:
                     - C
                 reducer:
-                  params: []
+                  params: [ ]
                   type: last
                 type: query
             datasource:
@@ -360,4 +400,5 @@ spec:
       annotations:
         summary: The minimum humidity of {{ "{{" }} $labels.device_name {{ "}}" }} was less than 10 percent in the last 24 hours
       isPaused: false
-{{- end }}
+
+  {{- end }}
