--- a/deployments/kubernetes/helm/observer/templates/switches-dashboard.yaml
+++ b/deployments/kubernetes/helm/observer/templates/switches-dashboard.yaml
@@ -2,15 +2,15 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: {{ .Values.name }}-climate-dashboard
+  name: {{ .Values.name }}-switches-dashboard
   namespace: {{ .Release.Namespace }}
 spec:
-  folderRef: {{ .Values.name }}-climate-folder
+  folderRef: {{ .Values.name }}-parent-folder
   resyncPeriod: 30s
   allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
       grafana: naboo
   json: >
-{{ .Files.Get "dashboards/climate-dashboard.json" | indent 4 }}
+{{ .Files.Get "dashboards/switches-dashboard.json" | indent 4 }}
 {{- end }}
